<package>
  <name>cob_3d_mapping_filters</name>
  <version>1.0.0</version>
  
  <description>
     Filters for point clouds.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>
  
  <url>http://wiki.ros.org/cob_3d_mapping_filters</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cob_3d_mapping_common</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>


