<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_mapping_filters</name>
	<version>1.0.0</version>

	<description>
		Filters for point clouds.
	</description>

	<license>LGPL</license>

	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>

	<url>http://wiki.ros.org/cob_3d_mapping_filters</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cob_3d_mapping_common</depend>
	<depend>libpcl-all</depend>
	<depend>nodelet</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>


