<package>
  <name>cob_3d_mapping_msgs</name>
  <version>1.0.0</version>

  <description>
     Message, service and action definitions for environment perception.
  </description>

  <license>LGPL</license>

  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>

  <url>http://wiki.ros.org/cob_3d_mapping_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>cob_object_detection_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


