<package>
  <name>cob_3d_mapping_pipeline</name>
  <version>1.0.0</version>
  
  <description>
     Launch files for mapping pipeline.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>
  
  <url>http://wiki.ros.org/cob_3d_mapping_pipeline</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>cob_3d_mapping_geometry_map</run_depend>
  <run_depend>cob_3d_mapping_msgs</run_depend>
  <run_depend>cob_3d_mapping_point_map</run_depend>
  <run_depend>cob_3d_registration</run_depend>
  <run_depend>cob_3d_segmentation</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>nodelet</run_depend>
  <!--run_depend>pcl_ros</run_depend-->
  <run_depend>rosbag</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
</package>



