<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_mapping_point_map</name>
	<version>1.0.0</version>
	
	<description>
		 Package for creating a point map of the environment.
	</description>
	
	<license>LGPL</license>
	
	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>
	
	<url>http://wiki.ros.org/cob_3d_mapping_point_map</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>actionlib</depend>
	<depend>actionlib_msgs</depend>
	<depend>cmake_modules</depend>
	<depend>cob_3d_mapping_common</depend>
	<depend>cob_3d_mapping_msgs</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>nodelet</depend>
	<!--depend>pcl</depend-->
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>std_srvs</depend>
	<!--depend>tf</depend>
	<depend>tf_conversions</depend-->

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>


